--- a/project1-demo.html
+++ b/project1-demo.html
@@ -26,7 +26,7 @@
                     <p class="insight-subtitle">A brief overview of the first insight.</p>
                 </div>
                 <p class="insight-description">This insight provides detailed analysis on key performance indicators and trends.</p>
-                <img src="../assets/images/image1.jpg" alt="Insight 1 Image" class="insight-img">
+                <img src="project-2.png" alt="Insight 1 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -34,7 +34,7 @@
                     <p class="insight-subtitle">A brief overview of the second insight.</p>
                 </div>
                 <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="../assets/images/image2.jpg" alt="Insight 2 Image" class="insight-img">
+                <img src="project-3.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -42,7 +42,7 @@
                     <p class="insight-subtitle">A brief overview of the second insight.</p>
                 </div>
                 <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="../assets/images/image2.jpg" alt="Insight 2 Image" class="insight-img">
+                <img src="Project-1.jpeg" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -50,7 +50,7 @@
                     <p class="insight-subtitle">A brief overview of the second insight.</p>
                 </div>
                 <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="../assets/images/image2.jpg" alt="Insight 2 Image" class="insight-img">
+                <img src="project-2.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -58,7 +58,7 @@
                     <p class="insight-subtitle">A brief overview of the second insight.</p>
                 </div>
                 <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="../assets/images/image2.jpg" alt="Insight 2 Image" class="insight-img">
+                <img src="project-3.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -66,12 +66,12 @@
                     <p class="insight-subtitle">A brief overview of the second insight.</p>
                 </div>
                 <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="../assets/images/image2.jpg" alt="Insight 2 Image" class="insight-img">
+                <img src="Project-1.jpeg" alt="Insight 2 Image" class="insight-img">
             </div>
             <!-- Add more insights as needed -->
         </section>
 
-        <section id="contact" class="contact-section">
+        <!-- <section id="contact" class="contact-section">
             <h2>Contact & Suggestions</h2>
             <p>We value your feedback! If you have any suggestions or comments about the project, please let us know.</p>
             <form id="contact-form" method="POST" action="sendmail.php">
@@ -86,13 +86,13 @@
         
                 <button type="submit" class="btn btn-submit">Submit</button>
             </form>
-        </section>
+        </section> -->
         
     </main>
 
-    <footer class="footer">
-        <p>&copy; 2024 Your Name | All Rights Reserved</p>
-    </footer>
+    <!-- <footer class="footer">
+        <p>&copy; 2024 Raju Sau | All Rights Reserved</p>
+    </footer> -->
 
     <script src="demo-script.js"></script>
 </body>
