--- a/index.html
+++ b/index.html
@@ -76,36 +76,29 @@
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img
-            src="raju-ai.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
+          <img src="raju-ai.png" alt="Profile picture" class="about-pic" />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <img
-                src="experience.png"
-                alt="experience icon"
-                class="icon"
-              />
+              <img src="experience.png" alt="experience icon" class="icon" />
               <h3>Experience</h3>
               <p>2+ years <br />Working On Data Analysis</p>
             </div>
             <div class="details-container">
-              <img
-                src=" education.png"
-                alt="Education icon"
-                class="icon"
-              />
+              <img src=" education.png" alt="Education icon" class="icon" />
               <h3>Education</h3>
               <p>B. Tech in<br />Computer Science and Engineering</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Passionate about turning data into actionable insights, I specialize in Python, SQL, Tableau, and Excel. As a Computer Science and Engineering student, I’ve developed dynamic projects like customer experience analysis and sales dashboards, demonstrating my commitment to innovative data solutions and continuous learning.
+              Passionate about turning data into actionable insights, I
+              specialize in Python, SQL, Tableau, and Excel. As a Computer
+              Science and Engineering student, I’ve developed dynamic projects
+              like customer experience analysis and sales dashboards,
+              demonstrating my commitment to innovative data solutions and
+              continuous learning.
             </p>
           </div>
         </div>
@@ -120,114 +113,105 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <div class="skill-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="Project-1.jpeg"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skill-sub-title project-title">US Road Accident Exploratory Data Analysis
-            </h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/rajusau/US-Accident-Exploratory-Data-Analysis'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='project1-demo.html'"
-              >
-                Live Demo
-              </button>
-            </div>
+      <div class="projects-grid">
+        <div class="project-item">
+          <div class="article-container">
+            <img src="Project-1.jpeg" alt="Project 1" class="project-img" />
           </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src=" project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skill-sub-title project-title">Project One</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src=" project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skill-sub-title project-title">Project One</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src=" project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skill-sub-title project-title">Project One</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
+          <h2 class="project-title">
+            US Road Accident Exploratory Data Analysis
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn project-btn"
+              onclick="location.href='https://github.com/rajusau/US-Accident-Exploratory-Data-Analysis'"
+            >
+              Github
+            </button>
+            <button
+              class="btn project-btn"
+              onclick="location.href='project1-demo.html'"
+            >
+              Live Demo
+            </button>
           </div>
         </div>
+        <div class="project-item">
+          <div class="article-container">
+            <img src="Project-1.jpeg" alt="Project 1" class="project-img" />
+          </div>
+          <h2 class="project-title">
+            US Road Accident Exploratory Data Analysis
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn project-btn"
+              onclick="location.href='https://github.com/rajusau/US-Accident-Exploratory-Data-Analysis'"
+            >
+              Github
+            </button>
+            <button
+              class="btn project-btn"
+              onclick="location.href='project1-demo.html'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="article-container">
+            <img src="Project-1.jpeg" alt="Project 1" class="project-img" />
+          </div>
+          <h2 class="project-title">
+            US Road Accident Exploratory Data Analysis
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn project-btn"
+              onclick="location.href='https://github.com/rajusau/US-Accident-Exploratory-Data-Analysis'"
+            >
+              Github
+            </button>
+            <button
+              class="btn project-btn"
+              onclick="location.href='project1-demo.html'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="article-container">
+            <img src="Project-1.jpeg" alt="Project 1" class="project-img" />
+          </div>
+          <h2 class="project-title">
+            US Road Accident Exploratory Data Analysis
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn project-btn"
+              onclick="location.href='https://github.com/rajusau/US-Accident-Exploratory-Data-Analysis'"
+            >
+              Github
+            </button>
+            <button
+              class="btn project-btn"
+              onclick="location.href='project1-demo.html'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <!-- Repeat the above block for each project -->
       </div>
       <img
-        src=" arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#skill'"
       />
     </section>
+
     <section id="skill">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Skills</h1>
@@ -237,45 +221,29 @@
             <h2 class="skill-sub-title">Technical Skills</h2>
             <div class="article-container">
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Python</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>SQL</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Tableau</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
-             
+
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Excel</h3>
                   <p>Experienced</p>
@@ -287,44 +255,28 @@
             <h2 class="skill-sub-title">Analytical Skills</h2>
             <div class="article-container">
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Data Analysis</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Visualization</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Statistics</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img
-                  src=" checkmark.png"
-                  alt="Skills icon"
-                  class="icon"
-                />
+                <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Git</h3>
                   <p>Intermediate</p>
@@ -351,7 +303,9 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:theraju2003@gmail.com">theraju2003@gmail.com</a></p>
+          <p>
+            <a href="mailto:theraju2003@gmail.com">theraju2003@gmail.com</a>
+          </p>
         </div>
         <div class="contact-info-container">
           <img
