--- a/index.html
+++ b/index.html
@@ -138,21 +138,21 @@
         </div>
         <div class="project-item">
           <div class="article-container">
-            <img src="Project-1.jpeg" alt="Project 1" class="project-img" />
+            <img src="HR dashboard thumbnail.jpg" alt="Project 2" class="project-img" />
           </div>
           <h2 class="project-title">
-            US Road Accident Exploratory Data Analysis
+            Human Resource Dashboard
           </h2>
           <div class="btn-container">
             <button
               class="btn project-btn"
-              onclick="location.href='https://github.com/rajusau/US-Accident-Exploratory-Data-Analysis'"
+              onclick="location.href='https://github.com/rajusau/HR-Dashboard'"
             >
               Github
             </button>
             <button
               class="btn project-btn"
-              onclick="location.href='project1-demo.html'"
+              onclick="location.href='project2-demo.html'"
             >
               Live Demo
             </button>
