--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('https://docs.google.com/document/d/1VjnxvtIqXtBwA9j1EBeXHjnJGbrE7JtTrfNQrmWOxmQ/edit?usp=sharing')"
+            onclick="window.open('Raju Analyst CV.pdf')"
           >
             Download CV
           </button>
@@ -116,7 +116,7 @@
       <div class="projects-grid">
         <div class="project-item">
           <div class="article-container">
-            <img src="Project-1.jpeg" alt="Project 1" class="project-img" />
+            <img src="US road accident analysis.jpeg" alt="Project 1" class="project-img" />
           </div>
           <h2 class="project-title">
             US Road Accident Exploratory Data Analysis
