--- a/project1-demo.html
+++ b/project1-demo.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1 - Live Demo</title>
+    <title>US Road Accident Exploratory Data Analysis</title>
     <link rel="stylesheet" href="demo-styles.css">
 </head>
 <body>
     <header class="header">
-        <h1>Project 1: Interactive Dashboard</h1>
-        <p class="header-intro">Explore the interactive features and insights of Project 1. Learn more about its functionalities and contributions.</p>
+        <h1>US Road Accident Exploratory Data Analysis</h1>
+        <p class="header-intro"></p>
     </header>
 
     <main>
