--- a/project1-demo.html
+++ b/project1-demo.html
@@ -9,64 +9,65 @@
 <body>
     <header class="header">
         <h1>US Road Accident Exploratory Data Analysis</h1>
-        <p class="header-intro"></p>
+        <p class="header-intro">PYTHON (Pandas, Numpy, Matplotlib, Seaborn)</p>
     </header>
 
     <main>
         <section id="about" class="about-section">
             <h2>About the Project</h2>
-            <p>This project showcases advanced data visualization techniques and interactive dashboards. Designed to provide in-depth insights and analysis, it leverages modern web technologies to deliver a seamless user experience.</p>
+            <p>This project analyzes United States accident data to identify key trends and patterns. By examining city-specific accident frequencies, weather conditions, and temporal variations, the project aims to uncover critical factors influencing road safety. The goal is to provide actionable insights and recommendations for improving traffic safety nationwide.</p>
             <a href="https://github.com/yourusername/project1" class="btn btn-primary" target="_blank">GitHub Repository</a>
         </section>
 
         <section id="insights" class="insights-container">
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 1</h3>
-                    <p class="insight-subtitle">A brief overview of the first insight.</p>
+                    <h3>Accident Frequency by City</h3>
+                    <p class="insight-subtitle">High concentration in few cities</p>
                 </div>
-                <p class="insight-description">This insight provides detailed analysis on key performance indicators and trends.</p>
-                <img src="project-2.png" alt="Insight 1 Image" class="insight-img">
+                <p class="insight-description">A small number of cities experience the majority of accidents, indicating high concentration in urban areas.</p>
+                <img src="project1-insight1.png" alt="Insight 1 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Yearly Increase in Accidents</h3>
+                    <p class="insight-subtitle">Accidents rising steadily each year.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="project-3.png" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">There is a consistent year-over-year increase in the number of accidents, indicating a growing trend in accident frequency.</p>
+                <img src="project1-insight7.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Impact of Temperature</h3>
+                    <p class="insight-subtitle">Moderate temperatures see more accidents.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="Project-1.jpeg" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Most accidents occur in moderate temperatures (68°F to 77°F), with higher frequencies in winter and specific months like January.</p>
+                <img src="project1-insight3.png" alt="Insight 3 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Peak Accident Times: Office Hours</h3>
+                    <p class="insight-subtitle">Accidents peak at office start/end.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="project-2.png" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Most accidents occur during the start and end of office hours, suggesting high traffic volumes and potential rush hour issues.</p>
+                <img src="project1-insight8.png" alt="Insight 4 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Accidents by Day and Night</h3>
+                    <p class="insight-subtitle">Nighttime accidents have different patterns.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="project-3.png" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Daytime accidents cover a broader temperature range, while nighttime accidents are concentrated in specific temperature ranges.</p>
+                <img src="project1-insight5.png" alt="Insight 5 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Weather Conditions</h3>
+                    <p class="insight-subtitle">More accidents in fair weather.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="Project-1.jpeg" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Accidents are more frequent in fair weather conditions, despite bad weather also contributing to accident rates.
+                </p>
+                <img src="project1-insight6.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <!-- Add more insights as needed -->
         </section>
