--- a/project1-demo.html
+++ b/project1-demo.html
@@ -16,7 +16,7 @@
         <section id="about" class="about-section">
             <h2>About the Project</h2>
             <p>This project analyzes United States accident data to identify key trends and patterns. By examining city-specific accident frequencies, weather conditions, and temporal variations, the project aims to uncover critical factors influencing road safety. The goal is to provide actionable insights and recommendations for improving traffic safety nationwide.</p>
-            <a href="https://github.com/yourusername/project1" class="btn btn-primary" target="_blank">GitHub Repository</a>
+            <a href="https://github.com/rajusau/US-Accident-Exploratory-Data-Analysis.git" class="btn btn-primary" target="_blank">GitHub Repository</a>
         </section>
 
         <section id="insights" class="insights-container">
