--- a/project2-demo.html
+++ b/project2-demo.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2 - Live Demo</title>
+    <title>HR Dashboard</title>
     <link rel="stylesheet" href="demo-styles.css">
 </head>
 <body>
     <header class="header">
-        <h1>Project 1: Interactive Dashboard</h1>
-        <p class="header-intro">Explore the interactive features and insights of Project 1. Learn more about its functionalities and contributions.</p>
+        <h1>Key Insights from the HR Dashboard</h1>
+        <p class="header-intro">Tableau</p>
     </header>
 
     <main>
         <section id="about" class="about-section">
             <h2>About the Project</h2>
-            <p>This project showcases advanced data visualization techniques and interactive dashboards. Designed to provide in-depth insights and analysis, it leverages modern web technologies to deliver a seamless user experience.</p>
-            <a href="https://github.com/yourusername/project1" class="btn btn-primary" target="_blank">GitHub Repository</a>
+            <p>The HR Dashboard project offers a deep dive into employee metrics with two dashboards: HR | Summary and HR | Detailed. It provides actionable insights into workforce trends, geographic distribution, demographics, education-performance correlation, age-salary relationships, and detailed employee data for strategic HR decision-making.</p>
+            <a href="https://github.com/rajusau/HR-Dashboard.git" class="btn btn-primary" target="_blank">GitHub Repository</a>
         </section>
 
         <section id="insights" class="insights-container">
