--- a/project2-demo.html
+++ b/project2-demo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Key Insights from the HR Dashboard</h1>
+        <h1>Human Resource Dashboard</h1>
         <p class="header-intro">Tableau</p>
     </header>
 
