--- a/project2-demo.html
+++ b/project2-demo.html
@@ -26,7 +26,7 @@
                     <p class="insight-subtitle">A brief overview of the first insight.</p>
                 </div>
                 <p class="insight-description">This insight provides detailed analysis on key performance indicators and trends.</p>
-                <img src="project-2.png" alt="Insight 1 Image" class="insight-img">
+                <img src="project2-insight1.png" alt="Insight 1 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -34,7 +34,7 @@
                     <p class="insight-subtitle">A brief overview of the second insight.</p>
                 </div>
                 <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="project-3.png" alt="Insight 2 Image" class="insight-img">
+                <img src="project2-insight2.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
