--- a/project2-demo.html
+++ b/project2-demo.html
@@ -22,51 +22,51 @@
         <section id="insights" class="insights-container">
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 1</h3>
-                    <p class="insight-subtitle">A brief overview of the first insight.</p>
+                    <h3>Employee Status Trends</h3>
+                    <p class="insight-subtitle">Track the number of employees hired, active, and terminated over time.</p>
                 </div>
-                <p class="insight-description">This insight provides detailed analysis on key performance indicators and trends.</p>
+                <p class="insight-description">Helps in understanding workforce fluctuations, identifying peak hiring or termination periods, and planning HR interventions accordingly.</p>
                 <img src="project2-insight1.png" alt="Insight 1 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Geospatial Distribution of Employees</h3>
+                    <p class="insight-subtitle">Visualization of employee locations on a map.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
+                <p class="insight-description">Provides a clear view of geographic distribution, aiding in decisions about office locations, remote work policies, and regional hiring strategies.</p>
                 <img src="project2-insight2.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Demographic and Educational Insights</h3>
+                    <p class="insight-subtitle">Analysis of employee demographics (e.g., age, gender) and educational attainment.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="Project-1.jpeg" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Assists in understanding workforce composition, diversity, and educational backgrounds, which can inform training and development programs.</p>
+                <img src="project2-insight3.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Correlation Between Education and Performance</h3>
+                    <p class="insight-subtitle">Examination of how educational levels impact performance metrics.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="project-2.png" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Helps in assessing the effectiveness of educational qualifications on employee performance, guiding recruitment and training strategies.</p>
+                <img src="project2-insight4.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Age vs. Salary Analysis</h3>
+                    <p class="insight-subtitle">Relationship between employee age and salary levels.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="project-3.png" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Provides insights into salary distribution across different age groups, highlighting potential areas for salary adjustments or career development opportunities.</p>
+                <img src="project2-insight5.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Insight 2</h3>
-                    <p class="insight-subtitle">A brief overview of the second insight.</p>
+                    <h3>Detailed Employee Directory</h3>
+                    <p class="insight-subtitle">Comprehensive list of employees with job roles, departments, and locations.</p>
                 </div>
-                <p class="insight-description">This insight highlights significant patterns and actionable metrics.</p>
-                <img src="Project-1.jpeg" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Facilitates detailed analysis of individual employee data, improving HR's ability to manage personnel, track performance, and support career planning.</p>
+                <img src="project2-insight6.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <!-- Add more insights as needed -->
         </section>
