--- a/project2-demo.html
+++ b/project2-demo.html
@@ -54,7 +54,8 @@
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Age vs. Salary Analysis</h3>
+                    <h3>Age vs. Salary 
+                        <br> Analysis</h3>
                     <p class="insight-subtitle">Relationship between employee age and salary levels.</p>
                 </div>
                 <p class="insight-description">Provides insights into salary distribution across different age groups, highlighting potential areas for salary adjustments or career development opportunities.</p>
