--- a/index.html
+++ b/index.html
@@ -158,6 +158,28 @@
             </button>
           </div>
         </div>
+        <div class="project-item">
+          <div class="article-container">
+            <img src="pizza sales.jpg" alt="Project 3" class="project-img" />
+          </div>
+          <h2 class="project-title">
+            Pizza Sales Analysis
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn project-btn"
+              onclick="location.href='https://github.com/rajusau/HR-Dashboard'"
+            >
+              Github
+            </button>
+            <button
+              class="btn project-btn"
+              onclick="location.href='project2-demo.html'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
    
         <!-- Repeat the above block for each project -->
       </div>
