--- a/project3-demo.html
+++ b/project3-demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Sales Analysis</title>
-    <link rel="stylesheet" href="demo-styles.css">
+    <link rel="stylesheet" href="demo1style.css">
 </head>
 <body>
     <header class="header">
@@ -27,7 +27,7 @@
                     <p class="insight-subtitle">Contribution of each pizza category to total revenue.</p>
                 </div>
                 <p class="insight-description">Analyzed the revenue share of each pizza category, revealing which categories contribute most to overall revenue.</p>
-                <img src="insight 1.png" alt="Insight 1 Image" class="insight-img">
+                <img src="project3_insight1.png" alt="Insight 1 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
