--- a/project3-demo.html
+++ b/project3-demo.html
@@ -27,7 +27,9 @@
                     <p class="insight-subtitle">Contribution of each pizza category to total revenue.</p>
                 </div>
                 <p class="insight-description">Analyzed the revenue share of each pizza category, revealing which categories contribute most to overall revenue.</p>
-                <img src="project3_insight1.png" alt="Insight 1 Image" class="insight-img">
+                <div class="insight-img-wrapper">
+                    <img src="project3_insight1.png" alt="Insight 1 Image" class="insight-img">
+                </div>
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -35,7 +37,9 @@
                     <p class="insight-subtitle">Tracking revenue growth over various periods.</p>
                 </div>
                 <p class="insight-description">Calculated cumulative revenue over time to identify trends and patterns in sales growth or decline.</p>
-                <img src="project2-insight2.png" alt="Insight 2 Image" class="insight-img">
+                <div class="insight-img-wrapper">
+                    <img src="project2-insight2.png" alt="Insight 2 Image" class="insight-img">
+                </div>
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -43,7 +47,9 @@
                     <p class="insight-subtitle">Best-selling pizzas based on revenue generated.</p>
                 </div>
                 <p class="insight-description">Identified the top three pizza types contributing the highest revenue, helping to focus on most profitable items.</p>
-                <img src="project2-insight3.png" alt="Insight 2 Image" class="insight-img">
+                <div class="insight-img-wrapper">
+                    <img src="project2-insight3.png" alt="Insight 2 Image" class="insight-img">
+                </div>
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -51,7 +57,9 @@
                     <p class="insight-subtitle">Revenue distribution across different pizza categories.</p>
                 </div>
                 <p class="insight-description">Provided a detailed breakdown of revenue by each pizza category to understand which categories perform best financially.</p>
-                <img src="project2-insight4.png" alt="Insight 2 Image" class="insight-img">
+                <div class="insight-img-wrapper">
+                    <img src="project2-insight4.png" alt="Insight 2 Image" class="insight-img">
+                </div>
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -59,7 +67,9 @@
                     <p class="insight-subtitle">Order volume trends by hour of day.</p>
                 </div>
                 <p class="insight-description">Analyzed order distribution by hour to determine peak times and optimize staffing and promotions.</p>
-                <img src="project2-insight5.png" alt="Insight 2 Image" class="insight-img">
+                <div class="insight-img-wrapper">
+                    <img src="project2-insight5.png" alt="Insight 2 Image" class="insight-img">
+                </div>
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -67,7 +77,9 @@
                     <p class="insight-subtitle">Average number of pizzas ordered per day.</p>
                 </div>
                 <p class="insight-description">Calculated the average daily pizza orders to assess overall demand and identify trends in customer behavior.</p>
-                <img src="project2-insight6.png" alt="Insight 2 Image" class="insight-img">
+                <div class="insight-img-wrapper">
+                    <img src="project2-insight6.png" alt="Insight 2 Image" class="insight-img">
+                </div>
             </div>
             <!-- Add more insights as needed -->
         </section>
