--- a/project3-demo.html
+++ b/project3-demo.html
@@ -28,7 +28,7 @@
                 </div>
                 <p class="insight-description">Analyzed the revenue share of each pizza category, revealing which categories contribute most to overall revenue.</p>
                 <div class="insight-img-wrapper">
-                    <img src="project3_insight1.png" alt="Insight 1 Image" class="insight-img">
+                    <img src="project3_insight1.jpg" alt="Insight 1 Image" class="insight-img">
                 </div>
             </div>
             <div class="insight">
@@ -38,7 +38,7 @@
                 </div>
                 <p class="insight-description">Calculated cumulative revenue over time to identify trends and patterns in sales growth or decline.</p>
                 <div class="insight-img-wrapper">
-                    <img src="project2-insight2.png" alt="Insight 2 Image" class="insight-img">
+                    <img src="project3_insight2.jpg" alt="Insight 2 Image" class="insight-img">
                 </div>
             </div>
             <div class="insight">
@@ -48,7 +48,7 @@
                 </div>
                 <p class="insight-description">Identified the top three pizza types contributing the highest revenue, helping to focus on most profitable items.</p>
                 <div class="insight-img-wrapper">
-                    <img src="project2-insight3.png" alt="Insight 2 Image" class="insight-img">
+                    <img src="project3_insight3.jpg" alt="Insight 2 Image" class="insight-img">
                 </div>
             </div>
             <div class="insight">
@@ -58,17 +58,7 @@
                 </div>
                 <p class="insight-description">Provided a detailed breakdown of revenue by each pizza category to understand which categories perform best financially.</p>
                 <div class="insight-img-wrapper">
-                    <img src="project2-insight4.png" alt="Insight 2 Image" class="insight-img">
-                </div>
-            </div>
-            <div class="insight">
-                <div class="insight-header">
-                    <h3>Hourly Order Distribution Analysis</h3>
-                    <p class="insight-subtitle">Order volume trends by hour of day.</p>
-                </div>
-                <p class="insight-description">Analyzed order distribution by hour to determine peak times and optimize staffing and promotions.</p>
-                <div class="insight-img-wrapper">
-                    <img src="project2-insight5.png" alt="Insight 2 Image" class="insight-img">
+                    <img src="project3_insight4.jpg" alt="Insight 2 Image" class="insight-img">
                 </div>
             </div>
             <div class="insight">
@@ -78,7 +68,7 @@
                 </div>
                 <p class="insight-description">Calculated the average daily pizza orders to assess overall demand and identify trends in customer behavior.</p>
                 <div class="insight-img-wrapper">
-                    <img src="project2-insight6.png" alt="Insight 2 Image" class="insight-img">
+                    <img src="project3_insight5.jpg"Insight 2 Image" class="insight-img">
                 </div>
             </div>
             <!-- Add more insights as needed -->
