--- a/index.html
+++ b/index.html
@@ -180,6 +180,28 @@
             </button>
           </div>
         </div>
+        <div class="project-item">
+          <div class="article-container">
+            <img src="Axis-Bank-Share-Price.jpeg" alt="Project 3" class="project-img" />
+          </div>
+          <h2 class="project-title">
+            Axis Bank Stock Analysis
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn project-btn"
+              onclick="location.href='https://github.com/rajusau/Axis-Bank-Stock-Analysis/'"
+            >
+              Github
+            </button>
+            <button
+              class="btn project-btn"
+              onclick="location.href='project4_demo.html'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
    
         <!-- Repeat the above block for each project -->
 
