--- a/project4_demo.html
+++ b/project4_demo.html
@@ -26,7 +26,7 @@
                     <p class="insight-subtitle">Long-term trend across 20 years.</p>
                 </div>
                 <p class="insight-description">The stock’s closing price has shown a consistent upward or downward trend over the past 20 years, reflecting its overall performance.</p>
-                <img src="project1-insight1.png" alt="Insight 1 Image" class="insight-img">
+                <img src="project4_insight1.png" alt="Insight 1 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -34,7 +34,7 @@
                     <p class="insight-subtitle">Monthly and yearly trading volume patterns.</p>
                 </div>
                 <p class="insight-description">Trading volume exhibits seasonal and annual variations, indicating periods of high and low trading activity throughout the year.</p>
-                <img src="project1-insight7.png" alt="Insight 2 Image" class="insight-img">
+                <img src="project4_insight2.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -42,7 +42,7 @@
                     <p class="insight-subtitle">Returns averaged by each calendar month.</p>
                 </div>
                 <p class="insight-description">Monthly average returns reveal patterns and performance variations, helping to identify strong and weak months for the stock.</p>
-                <img src="project1-insight3.png" alt="Insight 3 Image" class="insight-img">
+                <img src="project4_insight3.png" alt="Insight 3 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -50,7 +50,7 @@
                     <p class="insight-subtitle">Most volatile stock periods identified.</p>
                 </div>
                 <p class="insight-description">The periods with the highest volatility, measured by price fluctuations or rolling standard deviation, highlight significant market events or instability.</p>
-                <img src="project1-insight8.png" alt="Insight 4 Image" class="insight-img">
+                <img src="project4_insight4.png" alt="Insight 4 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -58,7 +58,7 @@
                     <p class="insight-subtitle">Performance before and after key events.</p>
                 </div>
                 <p class="insight-description">Analyzing stock performance surrounding significant events like market crashes provides insights into how the stock reacts to external shocks.</p>
-                <img src="project1-insight5.png" alt="Insight 5 Image" class="insight-img">
+                <img src="project4_insight5.png" alt="Insight 5 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
@@ -67,7 +67,7 @@
                 </div>
                 <p class="insight-description"> Examining how the closing price varied over 2020 uncovers trends and patterns specific to this year, including responses to market conditions.
                 </p>
-                <img src="project1-insight6.png" alt="Insight 2 Image" class="insight-img">
+                <img src="project4_insight6.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <!-- Add more insights as needed -->
         </section>
