--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
         <div class="project-item">
           <div class="article-container">
-            <img src="Axis-Bank-Share-Price.jpeg" alt="Project 3" class="project-img" />
+            <img src="Axis-Bank-Share-Price-Today.jpeg" alt="Project 4" class="project-img" />
           </div>
           <h2 class="project-title">
             Axis Bank Stock Analysis
@@ -197,6 +197,28 @@
             <button
               class="btn project-btn"
               onclick="location.href='project4_demo.html'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="article-container">
+            <img src="financial Transaction Analysis.jpg" alt="Project 5" class="project-img" />
+          </div>
+          <h2 class="project-title">
+            Financial Transaction Analysis
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn project-btn"
+              onclick="location.href='https://github.com/rajusau/Financial-Transaction-Analysis.git'"
+            >
+              Github
+            </button>
+            <button
+              class="btn project-btn"
+              onclick="location.href='project5_demo.html'"
             >
               Live Demo
             </button>
