--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
                   <h3>Tableau</h3>
-                  <p>Intermediate</p>
+                  <p>Experienced</p>
                 </div>
               </article>
 
@@ -302,7 +302,7 @@
               <article>
                 <img src=" checkmark.png" alt="Skills icon" class="icon" />
                 <div>
-                  <h3>Git</h3>
+                  <h3>Story Telling</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
